testdata/record01.reject.out
type error: can not unify
[32m'FrameBuffer [32mV1[m [32mV0[m[m
with
[32m'Float[m

in testdata/record01.reject.lc:26:15:
 in ScreenOut record.fieldA
              ^^^^^^
